# log-proxy

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  proxy.py  redaction.py
scripts/: publish_to_github.sh
tests/: test_proxy.py  test_redaction.py
